--- a/app.html
+++ b/app.html
@@ -7,7 +7,7 @@
 
 <title>Ossama Mehmood | Calculator</title>
 
-<link rel="stylesheet" href="calculator.css">
+<link rel="stylesheet" href="app.css">
 
 </head>
 
