--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body {
 
         <button>
 
-            <a href="calculator.html">Get Started</a>
+            <a href="app.html">Get Started</a>
 
         </button>
 
